# surrealdb-http

./: Cargo.toml  README.md  docker-compose.yml
.circleci/: config.yml
src/: surreal.rs
