[package]
name = "surrealdb-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
base64 = "0.21.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
simplehttp = "0.0.5"
thiserror = "1.0.47"

[dev-dependencies]
env = "0.0.0"
simplehttp = { version="0.0.5", features=["reqwest"] }
