[package]
name = "surrealdb-http"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Access crate for SurrealDB using the simplehttp crate, to enable esp32 controllers or WASM"
authors = ["Frank Lyaruu <flyaruu@gmail.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
base64 = "0.21.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
simplehttp =  { version="0.0.6" }
thiserror = "1.0.47"

[dev-dependencies]
env = "0.0.0"
simplehttp = { version="0.0.6", features=["reqwest"] }
